[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "sona_oversampling"
version = "0.1.2"
authors = [
  { name="Supakit Sroynam", email="6534467323@student.chula.ac.th" },
]
description = "Stochastic directional Oversampling using Negative Anomalous scores (SONA)"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]
